--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <script src="//cdn.jsdelivr.net/phaser/2.4.2/phaser.min.js"></script>
     <script src="js/game.js"></script>
+    <title>You Monster</title>
   </head>
   <body>
   </body>
