--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE>
 <html>
   <head>
-    <script src="//cdn.jsdelivr.net/phaser/2.4.2/phaser.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/phaser/2.4.2/phaser.min.js"></script>
     <script src="js/game.js"></script>
     <title>You Monster</title>
   </head>
